<resources>
    <string name="app_name">Wasilni Driver v2</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle"> </string>
    <string name="nav_header_desc"> </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome">Welcome in wasilni</string>
    <string name="next">Next</string>
    <string name="title_activity_home">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="captain_register">Register captain</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="send">Send</string>
    <string name="one_digit_hint">0</string>
    <string name="phone_number_hint">98…</string>
    <string name="country_code">+963</string>
    <string name="phone_number">Phone number</string>
    <string name="verification_code">Verification code</string>
    <string name="whatsapp_number_same_phone_number">Is whatsapp number is same as the phone number?</string>
    <string name="email">Email</string>
    <string name="birthdate">Birth date</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_hint">Select date</string>
    <string name="time_hint">Select time</string>
    <string name="region">Region</string>
    <string name="region_details">Region details</string>
    <string name="nationality">Nationality</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="image_identification">ID image</string>
    <string name="the_image">Image</string>
    <string name="has_bank_account">Do you have account bank ?</string>
    <string name="has_no_conviction">Do you have a no conviction ?</string>
    <string name="driving_license">Car license</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="car_mechanic">Car mechanic</string>
    <string name="car_insurance">Car insurance</string>
    <string name="brand_manufacture_year">Brand and manufacture year</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="bank">Bank</string>
    <string name="number">Number</string>

    <string name="front_page">Front</string>
    <string name="back_page">Back</string>
    <string name="color">Color</string>

    <string name="dialog_image_title">Upload options</string>
    <string name="dialog_image_message">Please pick your upload option</string>
    <string name="dialog_image_camera">Camera</string>
    <string name="dialog_image_gallery">Gallery</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="optional">(Optional)</string>
    <string name="seat_count"> Seat count </string>
    <string name="ready_to_pick_up_passenger">I am here, notify passenger</string>
    <string name="on_the_way_pick_up_passenger">Gonna pick up passenger</string>
    <string name="picked_up_passenger">Picked up passenger</string>
    <string name="drop_off_passenger">Drop-off done</string>

    <string name="preferred_time_interview">Preferred time for an interview </string>
    <string name="preferred_date_interview">Preferred date for an interview </string>

    <string name="waslni_region">Baramkah</string>
    <string name="waslni_address">Free zone - Nahaas company</string>
    <string name="waiting"> Waiting </string>

    <string name="rate">Rate</string>
    <string name="calculated_cost"> Calculated cost</string>
    <string name="booking_cost"> Booking cost </string>
    <string name="gender"> Gender</string>

    <string name="required_field">This field is required</string>
    <string name="auto_complete_selection">Please pick from the suggestion list.</string>
    <string name="car_number">Car number</string>
    <string name="you_are_offline">You are offline</string>
    <string name="you_are_online">You are online</string>

    <string name="profile">Profile</string>
    <string name="schedule">Schedule</string>
    <string name="daily_report">Daily report</string>
    <string name="weekly_report">Weekly report</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="pay">Pay</string>
    <string name="wait">Wait</string>
    <string name="error_401">Please login again</string>
    <string name="error_500">Please contact to customer service</string>
    <string name="error_400">please check your internt</string>
    <string name="error_422_interview">Please select another time</string>

    <string name="me">me</string>
    <string name="took">Cash received</string>
    <string name="logout">logout</string>
    <string name="password_error">password must be more then 8 characters</string>
    <string name="first_name_error">first name must be more then 3 characters</string>
    <string name="second_name_error">second name must be more then 3 characters</string>
    <string name="done">done</string>
    <string name="failure_message">تحقق من اتصالك بالانترنت</string>
    <string name="report_problem">إبلاغ عن مشكلة أو اقترح</string>
    <string name="quesetions_report">الرجاء اختيار أحد الأسباب المطروحة</string>
    <string name="select_number_report">الرجاء وضع الرقم المناسب</string>
    <string name="radio_reporting">الرجاء اختيار سبب من الأسباب التالية:</string>
    <string name="select_date_reporting">الرجاء اختيار تاريخ</string>
    <string name="select_cuase_report">الرجاء اختيار سبب أو اكثر من الاسباب التالية:</string>
    <string name="submit">تثبيت</string>
    <string name="select_date">اختيار تاريخ</string>
    <string name="reporting_text_title">الرجاء اضافة توصيف للمشكلة</string>



</resources>
