<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Fragments.PersonalInfoRegistrationFragment">

    <android.support.v7.widget.CardView
        app:cardElevation="3dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/register_card_margin"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/register_card_padding"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_marginTop="@dimen/label_icon_end_margin"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/license"
                    android:layout_marginEnd="@dimen/label_icon_end_margin"
                    android:layout_width="@dimen/icon_size_height"
                    android:layout_height="@dimen/icon_size_height" />
                <TextView
                    android:layout_gravity="center"
                    android:text="@string/driving_license"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/label_icon_end_margin"
                android:layout_marginEnd="@dimen/register_card_padding"
                android:layout_marginStart="@dimen/register_card_padding"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/license_date_start"
                    android:padding="@dimen/text_view_border_padding"
                    android:background="@drawable/gray_border"
                    android:layout_marginEnd="@dimen/text_view_border_padding"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:text="@string/start_date"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/license_date_end"
                    android:padding="@dimen/text_view_border_padding"
                    android:background="@drawable/gray_border"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:text="@string/end_date"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/label_icon_end_margin"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/no_conviction"
                    android:layout_marginEnd="@dimen/label_icon_end_margin"
                    android:layout_width="@dimen/icon_size_height"
                    android:layout_height="@dimen/icon_size_height" />
                <TextView
                    android:layout_gravity="center"
                    android:text="@string/has_no_conviction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_gravity="center"
                    android:text="@string/optional"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/label_icon_end_margin"
                android:layout_marginEnd="@dimen/register_card_padding"
                android:layout_marginStart="@dimen/register_card_padding"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/convicted_image"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:text="@string/the_image"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/label_icon_end_margin"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/bank"
                    android:layout_marginEnd="@dimen/label_icon_end_margin"
                    android:layout_width="@dimen/icon_size_height"
                    android:layout_height="@dimen/icon_size_height" />
                <TextView
                    android:layout_gravity="center"
                    android:text="@string/has_bank_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/label_icon_end_margin"
                android:layout_marginEnd="@dimen/register_card_padding"
                android:layout_marginStart="@dimen/register_card_padding"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/bank_yes"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:text="@string/yes"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/bank_no"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:text="@string/no"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Spinner
                android:id="@+id/bank_spinner"
                android:layout_marginTop="@dimen/space_between_fields"
                android:background="@drawable/bg_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"/>


            <LinearLayout
                android:layout_marginTop="@dimen/label_icon_end_margin"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/captain"
                    android:layout_marginEnd="@dimen/label_icon_end_margin"
                    android:layout_width="@dimen/icon_size_height"
                    android:layout_height="@dimen/icon_size_height" />
                <TextView
                    android:layout_gravity="center"
                    android:text="@string/image_identification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_gravity="center"
                    android:text="@string/optional"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/label_icon_end_margin"
                android:layout_marginEnd="@dimen/register_card_padding"
                android:layout_marginStart="@dimen/register_card_padding"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/id_front_page"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:text="@string/front_page"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/id_back_page"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:text="@string/back_page"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
