<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Fragments.PersonalInfoRegistrationFragment">

    <android.support.v7.widget.CardView
        app:cardElevation="3dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/register_card_margin"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/register_card_padding"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/space_between_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/car"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/label_icon_end_margin"
                    android:layout_width="@dimen/icon_size_height"
                    android:layout_height="@dimen/icon_size_height" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/car_number_layout"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/car_number_edit"
                        android:hint="@string/car_number"
                        android:maxLength="6"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/label_icon_end_margin"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/car"
                    android:layout_marginEnd="@dimen/label_icon_end_margin"
                    android:layout_width="@dimen/icon_size_height"
                    android:layout_height="@dimen/icon_size_height" />
                <TextView
                    android:layout_gravity="center"
                    android:text="@string/brand_manufacture_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/label_icon_end_margin"
                android:layout_marginEnd="@dimen/register_card_padding"
                android:layout_marginStart="@dimen/register_card_padding"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:layout_weight="1"
                    android:background="@drawable/bg_spinner"
                    android:layout_marginEnd="2dp"
                    android:layout_marginTop="@dimen/space_between_fields"
                    android:id="@+id/brand"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"/>
                <Spinner
                    android:layout_weight="1"
                    android:background="@drawable/bg_spinner"
                    android:layout_marginEnd="2dp"
                    android:layout_marginTop="@dimen/space_between_fields"
                    android:id="@+id/model"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"/>
                <Spinner
                    android:layout_weight="1"
                    android:background="@drawable/bg_spinner"
                    android:layout_marginTop="@dimen/space_between_fields"
                    android:id="@+id/manufacture_year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/label_icon_end_margin"
                android:layout_marginEnd="@dimen/register_card_padding"
                android:layout_marginStart="@dimen/register_card_padding"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/color"
                    android:gravity="center"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/icon_size_height" />
                <Spinner
                    android:background="@drawable/bg_spinner"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:id="@+id/car_color"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/label_icon_end_margin"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/mechanic"
                    android:layout_marginEnd="@dimen/label_icon_end_margin"
                    android:layout_width="@dimen/icon_size_height"
                    android:layout_height="@dimen/icon_size_height" />
                <TextView
                    android:layout_gravity="center"
                    android:text="@string/car_mechanic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_gravity="center"
                    android:text="@string/optional"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/label_icon_end_margin"
                android:layout_marginEnd="@dimen/register_card_padding"
                android:layout_marginStart="@dimen/register_card_padding"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/front_page"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:text="@string/front_page"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/back_page"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:text="@string/back_page"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/label_icon_end_margin"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/car_insurance"
                    android:layout_marginEnd="@dimen/label_icon_end_margin"
                    android:layout_width="@dimen/icon_size_height"
                    android:layout_height="@dimen/icon_size_height" />
                <TextView
                    android:layout_gravity="center"
                    android:text="@string/car_insurance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_gravity="center"
                    android:text="@string/optional"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/label_icon_end_margin"
                android:layout_marginEnd="@dimen/register_card_padding"
                android:layout_marginStart="@dimen/register_card_padding"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/insurance_date"
                    android:padding="@dimen/text_view_border_padding"
                    android:background="@drawable/gray_border"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/date_hint"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginTop="16dp"
                    android:id="@+id/insurance_image"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/the_image"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
