<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        app:cardElevation="3dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/set_interview"
        app:cardCornerRadius="10dp"
        android:layout_margin="@dimen/register_card_margin"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/waslni_address"

                android:padding="@dimen/register_card_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/book_interview_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_marginTop="@dimen/label_icon_end_margin"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/calendar"
                        android:layout_marginEnd="@dimen/label_icon_end_margin"
                        android:layout_width="@dimen/icon_size_height"
                        android:layout_height="@dimen/icon_size_height" />
                    <TextView
                        android:layout_gravity="center"
                        android:text="@string/preferred_date_interview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="@dimen/label_icon_end_margin"
                    android:layout_marginEnd="@dimen/register_card_padding"
                    android:layout_marginStart="@dimen/register_card_padding"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/interview_date"
                        android:padding="@dimen/text_view_border_padding"
                        android:background="@drawable/gray_border"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/date_hint"
                        android:layout_height="wrap_content" />


                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="@dimen/label_icon_end_margin"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/watch"
                        android:layout_marginEnd="@dimen/label_icon_end_margin"
                        android:layout_width="@dimen/icon_size_height"
                        android:layout_height="@dimen/icon_size_height" />
                    <TextView
                        android:layout_gravity="center"
                        android:text="@string/preferred_time_interview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="@dimen/label_icon_end_margin"
                    android:layout_marginEnd="@dimen/register_card_padding"
                    android:layout_marginStart="@dimen/register_card_padding"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/interview_time"
                        android:padding="@dimen/text_view_border_padding"
                        android:background="@drawable/gray_border"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/time_hint"
                        android:layout_height="wrap_content" />


                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:id="@+id/waslni_address"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/wasilni_gray"
                android:padding="@dimen/register_card_padding"
                android:layout_marginTop="@dimen/register_card_margin"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/label_marker_red"
                    android:layout_gravity="center"
                    android:layout_width="@dimen/icon_size_height"
                    android:layout_height="@dimen/icon_size_height" />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/register_card_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/waslni_region"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/waslni_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/set_interview"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/send"
        android:textColor="@color/white"
        android:background="@drawable/gradient_red_radius_btn"
        android:layout_margin="@dimen/register_card_margin"
        android:textSize="12sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</android.support.constraint.ConstraintLayout>

